fix content editor not showing up

--- a/client/main.sass
+++ b/client/main.sass
@@ -136,7 +136,10 @@ button
               input
                 @apply h-[38px]
 
-
+.sd-editor
+  &__container
+    @apply w-full h-full
+    
 .spaces-resize-handle
   @apply bg-secondary-300 hover:bg-secondary-400 text-secondary-300 hover:text-secondary-400 #{!important}
 .pane-header
